launchpad-buildd (167) UNRELEASED; urgency=medium

  * Allow the LXD backend to accept a LXD image instead of a chroot tarball,
    skipping the conversion step (LP: #1811677).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 07 Feb 2019 11:50:07 +0000

launchpad-buildd (166) xenial; urgency=medium

  [ Colin Watson ]
  * Run all tests at package build time, not just those in lpbuildd.tests.

  [ Tobias Koch ]
  * Update LXD backend to work with LXD 3.
  * buildlivefs: support passing a REPO_SNAPSHOT_STAMP variable into the
    environment, used to generate images with identical version of Debian
    packages during parallelized image builds.
  * buildlivefs: support passing a COHORT_KEY variable into the
    environment, used to pre-seed images with identical versions of
    snaps during parallelized image builds.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Jan 2019 13:10:27 +0000

launchpad-buildd (165) xenial; urgency=medium

  [ Steve Langasek, Tobias Koch ]
  * buildlivefs: support passing an IMAGE_TARGETS variable into the
    environment, for projects (i.e., ubuntu-cpc) that produce multiple
    images as part of a single build, in order to be selective about what
    builds to run.

  [ Colin Watson ]
  * Set SNAPCRAFT_BUILD_ENVIRONMENT=host when building snaps (LP: #1791201).
  * Call gatherResults in a different thread so that it doesn't block
    responses to XML-RPC requests (LP: #1795877).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 19 Oct 2018 08:10:22 +0100

launchpad-buildd (164) xenial; urgency=medium

  * Configure snap proxy settings for Subversion (LP: #1668358).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 16 Aug 2018 16:32:41 +0100

launchpad-buildd (163) xenial; urgency=medium

  * Revert change to tolerate chroot tarballs with a top-level directory
    other than chroot-autobuild/; this breaks symlink unpacking.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Jun 2018 00:23:35 +0100

launchpad-buildd (162) xenial; urgency=medium
