@@ -2,6 +2,8 @@ launchpad-buildd (167) UNRELEASED; urgency=medium
 
   * Allow the LXD backend to accept a LXD image instead of a chroot tarball,
     skipping the conversion step (LP: #1811677).
+  * Generalise snap channel handling slightly, allowing channel selection
+    for core16 and core18.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 07 Feb 2019 11:50:07 +0000
 
